--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <nav class="w-11/12 mx-auto flex justify-between items-center py-4">
+        <nav class="w-11/12 mx-auto flex justify-between items-center py-4 border--------------------b">
             <div class="w-[120px]">
                 <img src="assets/Logo.png" alt="">
             </div>
@@ -30,12 +30,20 @@
 
             </div>
             <div>
-                <button class="btn">STAR</button>
+                <button class="btn">STOR</button>
             </div>
 
         </nav>
     </header>
-    <script src="js/vedio.js"></script>
+    
+    <nav id = "catagories" class=" flex py-3 gap-10 justify-center">
+
+    </nav>
+
+
+
+
+    <script src="js/video.js"></script>
     
 </body>
 </html>
